# frame-identity

./: CHANGELOG.md  Cargo.toml  README.md
src/: face_store.rs  identity.rs  lib.rs  multimodal.rs  typing_patterns.rs  typing_trust_bridge.rs  voice_store.rs  voice_trust_bridge.rs
