[package]
name = "frame-identity"
version = "0.2.0"
edition = "2021"
authors = ["Magnus Trent <magnus@blackfall.dev>"]
license = "MIT"
repository = "https://github.com/Blackfall-Labs/frame-identity"
description = "Multi-modal biometric identity verification for AI systems"
keywords = ["biometrics", "voice", "typing", "face", "authentication"]
categories = ["authentication", "algorithms"]

[dependencies]
# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
rusqlite = { version = "0.32", features = ["bundled", "serde_json"] }

# Biometric dependencies
frame-catalog = "0.2"
frame-sentinel = "0.2"

# Serialization
bincode = "1.3"

# Pattern matching
regex = "1.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.0"
